# cython-blis

./: pyproject.toml  setup.py
.github/workflows/: cibuildwheel.yml  publish_pypi.yml  tests.yml
